--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         }
 
         body {
-            background-color: #000;
+            background-color: #3d1a16;
             color: #fff;
             height: 100vh; 
             display: flex;
@@ -120,7 +120,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color: #181818;
+            background-color: #1c1c1a;
             color: #fff;
             -webkit-tap-highlight-color: transparent;
         }
@@ -155,7 +155,7 @@
         </div>
 
         <div class="keypad">
-            <button class="btn-clear" onclick="clearDisplay()">C</button>
+            <button class="btn-clear" onclick="clearDisplay()">Pizza</button>
             <button class="btn-greenish" onclick="appendOperator('(')">(</button>
             <button class="btn-greenish" onclick="appendOperator(')')">)</button>
             <button class="btn-operator" onclick="appendOperator('/')">÷</button>
