--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                 justCalculated = true;
 
             } catch (e) {
-                updateDisplay("Erro");
+                updateDisplay("nao sei");
                 currentExpression = '';
             }
         }
